# game_engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
engine/source/: main.cpp
shaders/: shader.vert
source/: main.cpp
source/config/: application.hpp
source/graphics/: render_manager.cpp  render_manager.hpp
